bye team swap on screen3 now operational

--- a/templates/screen3.html
+++ b/templates/screen3.html
@@ -14,7 +14,12 @@
 					</tr>
 					<tr ng-repeat="pair in pairings"> <!--Don't have ID attributes in repeat-->
 					<td>
-						<div id="teamCardFormP" class="teamCard form-horizontal">
+						<div class="form-group" ng-show = "$index == numTeams && pair.pTeam.byeTeam">
+							<div >
+								<center><h1>BYE TEAM</h1></center>
+							</div>
+						</div>
+						<div id="teamCardFormP" ng-hide = "$index == numTeams && pair.pTeam.byeTeam" class="teamCard form-horizontal">
 							<div class="form-group">
 								<label for="TeamNumber" class="col-sm-2 control-label"> Team {{pair.pTeam.rank+1}} </label> 
 							</div>
@@ -47,15 +52,16 @@
 					</td>
 					
 					<td width="20px"><div ng-hide="$index == numTeams && isByeTeam"><center><h2>v.</h2></center></div>
-					<div ng-show="$index == numTeams && isByeTeam"><center><img src="resources/img/swap.gif" width="50" id="swapButton" ng-click="swapTeams()"></center></div></td>
+					<div ng-show="$index == numTeams && isByeTeam"><center><img src="resources/img/swap.gif" width="50" id="swapButton" ng-click="swapTeams()"></center></div>
+					</td>
 					
 					<td>
-					<div class="form-group" ng-show = "$index == numTeams && isByeTeam">
-						<div class="teamCard form-horizontal">
+					<div class="form-group" ng-show = "$index == numTeams && pair.dTeam.byeTeam">
+						<div >
 							<center><h1>BYE TEAM</h1></center>
 						</div>
 					</div>
-					<div class="form-group" ng-hide = "$index == numTeams && isByeTeam">
+					<div class="form-group" ng-hide = "$index == numTeams && pair.dTeam.byeTeam" >
 						<div id="teamCardFormD" class="teamCard form-horizontal">
 							<div class="form-group">
 								<label for="TeamNumber" class="col-sm-2 control-label"> Team {{pair.dTeam.rank+1}} </label> 
