--- a/templates/screen5.html
+++ b/templates/screen5.html
@@ -1,5 +1,5 @@
 <h1 align="center">Round {{round}} - {{name}}</h1>
-<center><div class="directions">Below are the team pairings resulting from round {{round}}. Resolve impermissibles to continue to enter in scores for round {{round+1}}.</div></center>
+<center><div class="directions">Below are the team pairings resulting from round {{round}}. Resolve impermissibles from top to bottom to continue to enter in scores for round {{round+1}}.</div></center>
 
 <h3 align="center">Enter Team Information for Round {{round}} Pairings:</h3>
 <p align="center">Swap list: {{swapList}}</p>
