Update about bye teams

--- a/templates/screen7.html
+++ b/templates/screen7.html
@@ -3,7 +3,8 @@
 			<div class="col-lg-5 col-sm-6">
 				<h2 class="section-heading">Step 1: </h2>
 				<p class="lead">Enter your tournament name and the number of teams at your tournament in the form fields indicated by the arrows. 
-				Afterwards, hit the submit button. You will not be able to access the next step until all form fields are filled out. </p>
+				Afterwards, hit the submit button. You will not be able to access the next step until all form fields are filled out. If you have an odd number of teams, 
+				TrialTrackr will generate and pair a Bye Team automatically. </p>
 			</div>
 			<div class="col-lg-5 col-lg-offset-2 col-sm-6">
 				<img class="img-responsive" src="resources/img/HTscreen1.png" alt="">
