cambios a las instrucciones

--- a/templates/screen7.html
+++ b/templates/screen7.html
@@ -35,7 +35,7 @@
 			<div class="col-lg-5 col-sm-6">
 				<h2 class="section-heading">Step 3: </h2>
 				<p class="lead">Determine the number of ballots won that round using the drop-down menu. Enter the ballot results. 
-				After clicking the button, you will then be taken to a page with the next rounds' pairings. If a pairing is impermissible, hit the swap button that appears.</p>
+				After clicking the button, you will then be taken to a page with the next rounds' pairings. If a pairing is impermissible, hit the swap button that appears from the top of the screen to bottom.</p>
 			</div>
 			<div class="col-lg-5 col-lg-offset-2 col-sm-6">
 				<img class="img-responsive" src="resources/img/HTscreen3.png" alt="">
