--- a/templates/screen4.html
+++ b/templates/screen4.html
@@ -3,8 +3,6 @@
 <p align="center" ng-show = "round == 1">Coin Flip Results: 
 	<select ng-model = "flip1" ng-options="side for side in coinflip" required></select>
 </p>
-<!--GL: Auto populate is currently an option for this screen, but numerical values do not seem to persist to the next screen if they're automatically generated vs entered in by hand.-->
-<!--<input type="button" class="btn btn-default" ng-click="autoPopScores()" value="Run Auto-Populate">-->
 	<div id="teamChoicesSummary" ng-init="showTeams()">
 		<form name="teamCards" id = "teamCards">	
 			<table cellspacing="0" cellpadding="0" id="teamRanktable" class="setTeamCard">
@@ -83,14 +81,11 @@
 					</tr>
 				</tbody>
 			</table>
-	<input type="button" class="btn btn-default" ng-disabled="teamCards.$invalid" ng-click = "saveRound()" ng-show="round != 4" value="See Pairings" ui-sref="screen5" id="startP_button"></form>
-	<input type="button" class="btn btn-default" ng-disabled="teamCards.$invalid" ng-click = "saveRound()" ng-show="round == 4" value="See Results" ui-sref="screen6" id="startP_button"></form>
-		<!--GL Reminder: The forward button here has a SPECIAL CASE--->
-<img class="backButton" src="resources/img/backbutton.png" ng-show = "round == 1" ui-sref="screen3">
-<img class="backButton" src="resources/img/backbutton.png" ng-show = "round != 1" ng-click = "undoRound()" ui-sref="screen4">
-<img class="forwardButton" src="resources/img/forwardbutton.png" align="right" ng-click = "saveRound()" ui-sref="screen5" ng-show="round != 4 && !teamCards.$invalid">
-<img class="forwardButton" src="resources/img/forwardbutton.png" align="right" ng-click = "saveRound()" ui-sref="screen6" ng-show="round == 4 && !teamCards.$invalid">
-
-		
+			<input type="button" class="btn btn-default" ng-disabled="teamCards.$invalid" ng-click = "saveRound()" ng-show="round != 4" value="See Pairings" ui-sref="screen5" id="startP_button">
+			<input type="button" class="btn btn-default" ng-disabled="teamCards.$invalid" ng-click = "saveRound()" ng-show="round == 4" value="See Results" ui-sref="screen6" id="startP_button">
+			<img class="backButton" src="resources/img/backbutton.png" ng-show = "round == 1" ui-sref="screen3">
+			<img class="backButton" src="resources/img/backbutton.png" ng-show = "round != 1" ng-click = "undoRound()" ui-sref="screen4">
+			<img class="forwardButton" src="resources/img/forwardbutton.png" align="right" ng-click = "saveRound()" ui-sref="screen5" ng-show="round != 4 && !teamCards.$invalid">
+			<img class="forwardButton" src="resources/img/forwardbutton.png" align="right" ng-click = "saveRound()" ui-sref="screen6" ng-show="round == 4 && !teamCards.$invalid">
 		</form>
 	</div>
