--- a/templates/screen1.html
+++ b/templates/screen1.html
@@ -11,7 +11,7 @@
 				<a ui-sref="screen2" class="btn btn-default btn-lg"><span class="network-name">Start Tracking Your Trials!</span></a>
 			</li>
 			<li>
-				<a ui-sref="screen7" class="btn btn-default btn-lg"><span class="network-name">Learn How To Use TrialTrackr</span></a>
+				<a ui-sref="instructions" class="btn btn-default btn-lg"><span class="network-name">Learn How To Use TrialTrackr</span></a>
 			</li>
 		</ul>
     </div>
